# dummy_mahesh

./: .gitignore  2025-07-09-this-session-is-being-continued-from-a-previous-co.txt  AUTHENTICATION.md  CLI_BACKEND_README.md  COMPLETE_SOLUTION_README.md  COMPLETE_SYSTEM_ANALYSIS.md  DEMO_READY.md  INTERACTIVE_DEPLOYMENT_GUIDE.md  LDAP_NETGROUP_SETUP.md  LOGIN_INFO.md  PROJECT_STRUCTURE.md  README.md  SCRIPTS_INVENTORY.md  SECURITY.md  SIMPLE_SOLUTION.md  ai_to_smart_changes_summary.md  backend_only_structure.md  backend_setup.sh  cleanup_installation.sh  demo_setup.sh  deploy_complete.sh  deploy_interactive.sh  diagnose_issues.sh  final_postgresql_fix.sh  fix_login_compatibility.sh  fix_patchadmin_password.sh  fix_user_manager.sh  foolproof_setup.sh  main.py  manage_production_services.py  manage_services.py  minimal_patching_engine.py  monitor.py  patching.db  quick_cleanup.sh  quick_postgresql_fix.sh  requirements.txt  requirements_sqlite.txt  setup_master_csv_sync.sh  start_complete_solution.sh  (+3 more)
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  security-scan.yml
backup/obsolete_scripts/: README.md  fix_config.sh  fix_dashboard_template.sh  fix_db_config.sh  fix_string_concatenation.sh  quick_reset.sh  simple_fix.sh
bash_scripts/: dell_idrac_check.sh  disk_check.sh  patch_execution.sh  server_validation.sh
config/: __init__.py  admin_config.json  server_groups.json  settings.py  users.py
data/: servers.csv
database/: __init__.py  models.py  schema.sql
docs/: ADMIN_QUICK_REFERENCE.md  ADMIN_TECHNICAL_GUIDE.md  CLI_COMMAND_REFERENCE.md  WEB_PORTAL_USER_GUIDE.md  deployment_guide.md
dump_folder/: COMPLETE_REACT_SOLUTION.md  REACT_MIGRATION_GUIDE.md  build_react_app.py  connect_flask_react.py  deploy_react_flask.sh  react_app.html  react_routes.py  setup_complete_react_solution.sh  setup_react_migration.sh  simple_api.py  start_api_server.sh  start_backend.sh  start_complete_react_solution.sh  start_flask_react.sh  start_frontend.sh  start_react_only.sh
dump_folder/api_backend/: additional_endpoints.py  app.py  complete_api.py  endpoints.py  requirements.txt
dump_folder/api_server/: app.py  requirements.txt
dump_folder/backend_api/: __init__.py  app.py  config.py  decorators.py  error_handlers.py  middleware.py  requirements.txt
dump_folder/backend_api/routes/: __init__.py  approvals.py  audit.py  auth.py  health.py  patching.py  reports.py  servers.py  system.py
dump_folder/backend_api/utils/: __init__.py  audit.py  pagination.py  validators.py
dump_folder/frontend/: .eslintrc.json  README.md  audit-ci.json  package.json  tsconfig.json
dump_folder/frontend/public/: index.html  manifest.json
dump_folder/frontend/src/: App.tsx  index.tsx
dump_folder/frontend/src/components/Common/: ErrorBoundary.tsx  LoadingSpinner.tsx  StatusChip.tsx
dump_folder/frontend/src/components/Layout/: MainLayout.tsx  NotificationBell.tsx  Sidebar.tsx  UserMenu.tsx
dump_folder/frontend/src/constants/: index.ts
dump_folder/frontend/src/hooks/: useAuth.ts
dump_folder/frontend/src/pages/Approvals/: ApprovalList.tsx
dump_folder/frontend/src/pages/Dashboard/: Dashboard.tsx
dump_folder/frontend/src/pages/Login/: Login.tsx
dump_folder/frontend/src/pages/Patching/: PatchingJobs.tsx  StartPatchingDialog.tsx
dump_folder/frontend/src/services/: api.ts
dump_folder/frontend/src/types/: api.ts
dump_folder/frontend/src/utils/: auth.ts  helpers.ts
dump_folder/js/: main.45b6aac8.js  main.45b6aac8.js.map
dump_folder/react_patching_system/: README.md  start_system.sh  start_system_fixed.sh
dump_folder/react_patching_system/backend/: app.py  requirements.txt
dump_folder/react_patching_system/backend/routes/: admin.py  reports.py  utils.py
dump_folder/react_patching_system/frontend/: package-lock.json  package.json
dump_folder/react_patching_system/frontend/public/: index.html
dump_folder/react_patching_system/frontend/src/: App.tsx
linux_patching_cli/: INSTALL.md  README.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
linux_patching_cli/cli/: patch_manager.py
linux_patching_cli/config/: email_templates.py  settings.py
linux_patching_cli/core/: metrics.py  patching_engine.py
linux_patching_cli/utils/: csv_handler.py  email_sender.py  logger.py  ssh_handler.py  timezone_handler.py
logs/: logging-config.yml
maintenance/: maintenance-procedures.md  update-procedures.sh
monitoring/: alerts.yml  docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: main-dashboard.json
scripts/: __init__.py  admin_manager.py  automated_reports.py  csv_analyzer.py  generate_host_groups.py  intelligent_scheduler.py  ldap_manager.py  load_predictor.py  scheduler.py  step0_approval_requests.py  step1_monthly_notice.py  step1b_weekly_followup.py  step2_reminders.py  step3_prechecks.py  step4_scheduler.py  step5_patch_validation.py  step6_post_patch.py  step7_email_handler.py  sync_host_groups.py
templates/: admin_daily_report.html  admin_weekly_report.html  approval_confirmation.html  approval_request.html  completion_notice.html  daily_reminder.html  monthly_notice.html  weekly_followup.html  weekly_reminder.html
utils/: __init__.py  csv_field_mapper.py  csv_handler.py  database_sync.py  email_sender.py  external_csv_importer.py  ldap_auth.py  logger.py  master_csv_sync.py  nslcd_ldap_auth.py  phonedb_converter.py  ssh_manager.py  timezone_handler.py  verify_setup.py
web_portal/: app.py  app_split1.py  app_split2.py
web_portal/split_analysis/: app_part1.py  app_part2.py  app_part3.py  app_part4.py  app_part5.py
web_portal/static/: main.js  style.css
web_portal/templates/: admin_advanced.html  admin_panel.html  base.html  dashboard.html  index.html  login.html  logs.html  reports_dashboard.html  server_detail.html  system_config.html
(+13 files in other folders)
